[package]
name = "two_pointers"
version = "0.1.0"
edition = "2021"
description = "Solutions for the coding challenges of the 'Two Pointers' category"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "palindrome"
path = "src/bin/valid_palindrome.rs"

[[bin]]
name = "sum_2"
path = "src/bin/two_sum_2_input_array_is_sorted.rs"

[[bin]]
name = "3sum"
path = "src/bin/3sum.rs"

[[bin]]
name = "most_water"
path = "src/bin/container_with_most_water.rs"

[[bin]]
name = "trapping_rain"
path = "src/bin/trapping_rain_water.rs"
